examples/errors/part2_semantic1_types_of_literals_valid.lya
syn a = 42; // "int"
syn b = 'b'; // "char"
syn c = "hello"; // "string"
syn d = true; // "bool"